"report check in 2018-10-04"

--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -17,8 +17,8 @@ Cloning into 'think-java-Crevin921'...
 
 <hr>
 
-<b>[Assignment]  >Think Java: 1< </b>
-  [DESC] First Assignment, Ch2-Ch4
+<b>[Assignment]  >Think Java: Ch2-ch4< </b>
+  [DESC] HW1, Ch2-Ch4
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
@@ -59,8 +59,8 @@ Seconds to minutes to hours
 Im thinking of a number between 1 and 100
 	Can you guess what it is? 
 	your guess was: 13
-	The number i was thinking of was: 88
-	you were off by -75
+	The number i was thinking of was: 92
+	you were off by -79
 	
 <--
 	[OUTPUT OK]
@@ -77,13 +77,13 @@ Im thinking of a number between 1 and 100
 [SUMMARY] 
 	['Multadd: COMPILE ERROR (- 0.10)']
 [DONE chapter4]
-[ASSIGNMENT DONE] Think Java: 1
+[ASSIGNMENT DONE] Think Java: Ch2-ch4
 <b>          [SCORE] 0.73</b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 2< </b>
-  [DESC] Second Assignment, Ch 6
+<b>[Assignment]  >Think Java: Ch6< </b>
+  [DESC] HW2, Ch 6
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
@@ -121,13 +121,13 @@ Ch6Ex5.java:57: error: cannot access Exercise5
 	['Exercise4: COMPILE ERROR (- 0.30)'
 	 'Exercise5: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 2
+[ASSIGNMENT DONE] Think Java: Ch6
 <b>          [SCORE] 0.40</b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 3< </b>
-  [DESC] Third Assignment, Swettercise
+<b>[Assignment]  >Swettercise1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
@@ -170,7 +170,7 @@ Ch6Ex5.java:57: error: cannot access Exercise5
 [SUMMARY] 
 	['Swettercise1: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 3
+[ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] 0.22</b>
 
 </pre></body></html>
