--- a/stureports/think-java/Fwuff547.think-java_results.html
+++ b/stureports/think-java/Fwuff547.think-java_results.html
@@ -17,8 +17,8 @@ Cloning into 'think-java-Fwuff547'...
 
 <hr>
 
-<b>[Assignment]  >Think Java: 1< </b>
-  [DESC] First Assignment, Ch2-Ch4
+<b>[Assignment]  >Think Java: Ch2-ch4< </b>
+  [DESC] HW1, Ch2-Ch4
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
@@ -65,7 +65,7 @@ How many seconds?
 [RUNNING] Exercise4
 -->
 I have a number between 1 and 100, guess what it is?
-	You guessed 13, I was thinking of 19, you were 6 off.
+	You guessed 13, I was thinking of 2, you were -11 off.
 <--
 	[OUTPUT OK]
 
@@ -90,13 +90,13 @@ The result is 5.0
 [SUMMARY] 
 	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
-[ASSIGNMENT DONE] Think Java: 1
+[ASSIGNMENT DONE] Think Java: Ch2-ch4
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 2< </b>
-  [DESC] Second Assignment, Ch 6
+<b>[Assignment]  >Think Java: Ch6< </b>
+  [DESC] HW2, Ch 6
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
@@ -158,13 +158,13 @@ abcdef
 	['Exercise4: PASSED - EXCELLENT!'
 	 'Exercise5: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 2
+[ASSIGNMENT DONE] Think Java: Ch6
 <b>          [SCORE] <font color="green">0.95</font></b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 3< </b>
-  [DESC] Third Assignment, Swettercise
+<b>[Assignment]  >Swettercise1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
@@ -207,7 +207,7 @@ abcdef
 [SUMMARY] 
 	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 3
+[ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
