--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -17,8 +17,8 @@ Cloning into 'think-java-jadenngo13'...
 
 <hr>
 
-<b>[Assignment]  >Think Java: 1< </b>
-  [DESC] First Assignment, Ch2-Ch4
+<b>[Assignment]  >Think Java: Ch2-ch4< </b>
+  [DESC] HW1, Ch2-Ch4
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
@@ -66,8 +66,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 15
-	You were off by: 2
+	The number I was thinking of was: 53
+	You were off by: 40
 	
 <--
 	[OUTPUT OK]
@@ -93,13 +93,13 @@ Enter a number: Your guess is: 13
 [SUMMARY] 
 	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
-[ASSIGNMENT DONE] Think Java: 1
+[ASSIGNMENT DONE] Think Java: Ch2-ch4
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 2< </b>
-  [DESC] Second Assignment, Ch 6
+<b>[Assignment]  >Think Java: Ch6< </b>
+  [DESC] HW2, Ch 6
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
@@ -195,13 +195,13 @@ index of letter a :0
 	['Exercise4: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.'
 	 'Exercise5: PASSED - BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 2
+[ASSIGNMENT DONE] Think Java: Ch6
 <b>          [SCORE] <font color="green">0.85</font></b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 3< </b>
-  [DESC] Third Assignment, Swettercise
+<b>[Assignment]  >Swettercise1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
@@ -244,7 +244,7 @@ index of letter a :0
 [SUMMARY] 
 	['Swettercise1: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 3
+[ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] <font color="green">0.91</font></b>
 
 </pre></body></html>
