--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -17,8 +17,8 @@ Cloning into 'think-java-AdamRashid'...
 
 <hr>
 
-<b>[Assignment]  >Think Java: 1< </b>
-  [DESC] First Assignment, Ch2-Ch4
+<b>[Assignment]  >Think Java: Ch2-ch4< </b>
+  [DESC] HW1, Ch2-Ch4
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
@@ -73,8 +73,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 25
-	You were off by: 12
+	The number I was thinking of is: 69
+	You were off by: 56
 	
 <--
 	[OUTPUT OK]
@@ -101,13 +101,13 @@ I'm thinking of a number between 1 and 100(Including Both)
 [SUMMARY] 
 	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
-[ASSIGNMENT DONE] Think Java: 1
+[ASSIGNMENT DONE] Think Java: Ch2-ch4
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 2< </b>
-  [DESC] Second Assignment, Ch 6
+<b>[Assignment]  >Think Java: Ch6< </b>
+  [DESC] HW2, Ch 6
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
@@ -162,13 +162,13 @@ I'm thinking of a number between 1 and 100(Including Both)
 	['Exercise4: PASSED - EXCELLENT!'
 	 'Exercise5: PASSED - EXCELLENT!']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 2
+[ASSIGNMENT DONE] Think Java: Ch6
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 3< </b>
-  [DESC] Third Assignment, Swettercise
+<b>[Assignment]  >Swettercise1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
@@ -211,7 +211,7 @@ I'm thinking of a number between 1 and 100(Including Both)
 [SUMMARY] 
 	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 3
+[ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
