--- a/stureports/think-java/notswett.think-java_results.html
+++ b/stureports/think-java/notswett.think-java_results.html
@@ -17,8 +17,8 @@ Cloning into 'think-java-notswett'...
 
 <hr>
 
-<b>[Assignment]  >Think Java: 1< </b>
-  [DESC] First Assignment, Ch2-Ch4
+<b>[Assignment]  >Think Java: Ch2-ch4< </b>
+  [DESC] HW1, Ch2-Ch4
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
@@ -35,13 +35,13 @@ Cloning into 'think-java-notswett'...
 [SUMMARY] 
 	['Multadd: MISSING (- 0.17)']
 [DONE chapter4]
-[ASSIGNMENT DONE] Think Java: 1
+[ASSIGNMENT DONE] Think Java: Ch2-ch4
 <b>          [SCORE] 0.08</b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 2< </b>
-  [DESC] Second Assignment, Ch 6
+<b>[Assignment]  >Think Java: Ch6< </b>
+  [DESC] HW2, Ch 6
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
@@ -91,13 +91,13 @@ Cloning into 'think-java-notswett'...
 	['Exercise4: COMPILE ERROR (- 0.30)'
 	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 2
+[ASSIGNMENT DONE] Think Java: Ch6
 <b>          [SCORE] 0.20</b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 3< </b>
-  [DESC] Third Assignment, Swettercise
+<b>[Assignment]  >Swettercise1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
@@ -140,7 +140,7 @@ Cloning into 'think-java-notswett'...
 [SUMMARY] 
 	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 3
+[ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
