--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -17,8 +17,8 @@ Cloning into 'think-java-tpipitone'...
 
 <hr>
 
-<b>[Assignment]  >Think Java: 1< </b>
-  [DESC] First Assignment, Ch2-Ch4
+<b>[Assignment]  >Think Java: Ch2-ch4< </b>
+  [DESC] HW1, Ch2-Ch4
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
@@ -69,7 +69,7 @@ How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
 -->
 Guess my number between 1 and 100!
 	Type a number: Your guess is: 13
-	My number was 89. You were off by 76.
+	My number was 40. You were off by 27.
 	
 <--
 	[OUTPUT OK]
@@ -97,13 +97,13 @@ Ch 4 Multadd
 [SUMMARY] 
 	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
-[ASSIGNMENT DONE] Think Java: 1
+[ASSIGNMENT DONE] Think Java: Ch2-ch4
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 2< </b>
-  [DESC] Second Assignment, Ch 6
+<b>[Assignment]  >Think Java: Ch6< </b>
+  [DESC] HW2, Ch 6
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
@@ -149,13 +149,13 @@ Ch6Ex4.java:56: error: cannot find symbol
 	['Exercise4: COMPILE ERROR (- 0.30)'
 	 'Exercise5: PASSED - EXCELLENT!']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 2
+[ASSIGNMENT DONE] Think Java: Ch6
 <b>          [SCORE] 0.70</b>
 
 <hr>
 
-<b>[Assignment]  >Think Java: 3< </b>
-  [DESC] Third Assignment, Swettercise
+<b>[Assignment]  >Swettercise1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
@@ -198,7 +198,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 [SUMMARY] 
 	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
-[ASSIGNMENT DONE] Think Java: 3
+[ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
