"report check in 2018-10-07"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-04
+Run date: 2018-10-07
 <br>Student User: asianaaron2
 <br>Project: think-java
 <br>
@@ -108,28 +108,27 @@ Is abecedarian!
 	Is abecedarian!
 	Is abecedarian!
 	Not abecederian!
-	
-	<br>Results for Exercise4.isAbecedarian()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.05]
-	
+	Test: Results for Exercise4.isAbecedarian()
+	  [PASSED] Exercise4.isAbecedarian("abcdef") 
+	  [   :( ] Exercise4.isAbecedarian("aaaaaa"): 
+			EXPECTED: true
+			RECEIVED: false
+	  [PASSED] Exercise4.isAbecedarian("gfedcba") 
+	  [PASSED] Exercise4.isAbecedarian("z") 
+	  [PASSED] Exercise4.isAbecedarian("beknow") 
+	  [PASSED] Exercise4.isAbecedarian("no") 
+	  [PASSED] Exercise4.isAbecedarian("he") 
+	  TEST FINISHED, PASSED: 6/7.
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Exercise4: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.'
+	['Exercise4: PASSED - EXCELLENT!'
 	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.45</b>
+<b>          [SCORE] 0.50</b>
 
 <hr>
 
