--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-04
+Run date: 2018-10-07
 <br>Student User: Crevin921
 <br>Project: think-java
 <br>
@@ -59,8 +59,8 @@ Seconds to minutes to hours
 Im thinking of a number between 1 and 100
 	Can you guess what it is? 
 	your guess was: 13
-	The number i was thinking of was: 92
-	you were off by -79
+	The number i was thinking of was: 14
+	you were off by -1
 	
 <--
 	[OUTPUT OK]
@@ -73,7 +73,11 @@ Im thinking of a number between 1 and 100
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
+	[ERROR] javac failed Multadd.java Multadd.java:1: error: class multAdd is public, should be declared in a file named multAdd.java
+		public class multAdd {
+		       ^
+	1 error
+	
 [SUMMARY] 
 	['Multadd: COMPILE ERROR (- 0.10)']
 [DONE chapter4]
@@ -91,38 +95,34 @@ Im thinking of a number between 1 and 100
 	[SUCCESSFUL COMPILE] Exercise4.java
 [TESTING WITH] Ch6Ex4
 [COMPILING] Ch6Ex4.java
-	[ERROR] javac failed Ch6Ex4.java
- ----begin compile output------- 
-Ch6Ex4.java:56: error: cannot access Exercise4
-	            boolean isIt = Exercise4.isAbecedarian(testStr);
-	                           ^
-	  bad source file: ./Exercise4.java
-	    file does not contain class Exercise4
-	    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
-	1 error
+	[SUCCESSFUL COMPILE] Ch6Ex4.java
+[RUNNING] Ch6Ex4
+-->
+Test: Results for Exercise4.isAbecedarian()
+	  [PASSED] Exercise4.isAbecedarian("abcdef") 
+	  [PASSED] Exercise4.isAbecedarian("aaaaaa") 
+	  [PASSED] Exercise4.isAbecedarian("gfedcba") 
+	  [PASSED] Exercise4.isAbecedarian("z") 
+	  [PASSED] Exercise4.isAbecedarian("beknow") 
+	  [PASSED] Exercise4.isAbecedarian("no") 
+	  [PASSED] Exercise4.isAbecedarian("he") 
+	  TEST FINISHED, PASSED: 7/7.
 	
------------END COMPILE-------
+<--
+	[OUTPUT OK]
+
 [COMPILING] Exercise5.java
-	[SUCCESSFUL COMPILE] Exercise5.java
-[TESTING WITH] Ch6Ex5
-[COMPILING] Ch6Ex5.java
-	[ERROR] javac failed Ch6Ex5.java
- ----begin compile output------- 
-Ch6Ex5.java:57: error: cannot access Exercise5
-	            boolean isIt = Exercise5.isDoubloon(testStr);
-	                           ^
-	  bad source file: ./Exercise5.java
-	    file does not contain class Exercise5
-	    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
+	[ERROR] javac failed Exercise5.java Exercise5.java:11: error: incomparable types: char and String
+			if (letter == theWord.substring(0))
+			           ^
 	1 error
 	
------------END COMPILE-------
 [SUMMARY] 
-	['Exercise4: COMPILE ERROR (- 0.30)'
+	['Exercise4: PASSED - EXCELLENT!'
 	 'Exercise5: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.40</b>
+<b>          [SCORE] 0.70</b>
 
 <hr>
 
@@ -138,39 +138,62 @@ Ch6Ex5.java:57: error: cannot access Exercise5
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-
-	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">raised exception</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">raised exception</td><td bgcolor="red"><b>semaj dnob 700 </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">raised exception</td><td bgcolor="red"><b>sannanab </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">raised exception</td><td bgcolor="red"><b>tacocat </b></td></tr>
-	</table><br>
-	
-	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	</table><br>
-	
-	<br>Results for isPrime()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
-	</table><br>
-	[deductions=0.78]
-	
+Test: Results for reverseStr()
+	  [   :( ] reverseStr("I haz win?"): 
+			EXPECTED: ?niw zah I
+			RECEIVED: raised exception
+	  [   :( ] reverseStr("007 bond james"): 
+			EXPECTED: semaj dnob 700
+			RECEIVED: raised exception
+	  [   :( ] reverseStr("banannas"): 
+			EXPECTED: sannanab
+			RECEIVED: raised exception
+	  [   :( ] reverseStr("tacocat"): 
+			EXPECTED: tacocat
+			RECEIVED: raised exception
+	  TEST FINISHED, PASSED: 0/4.
+	Test: Results for collatzThis()
+	  [   :( ] collatzThis("12"): 
+			EXPECTED: 12, 6, 3, 10, 5, 16, 8, 4, 2, 1
+			RECEIVED: Raised Exception
+	  [   :( ] collatzThis("4"): 
+			EXPECTED: 4, 2, 1
+			RECEIVED: Raised Exception
+	  [   :( ] collatzThis("11"): 
+			EXPECTED: 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1
+			RECEIVED: Raised Exception
+	  TEST FINISHED, PASSED: 0/7.
+	Test: Results for isPrime()
+	  [   :( ] isPrime("12"): 
+			EXPECTED: false
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("4"): 
+			EXPECTED: false
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("7"): 
+			EXPECTED: true
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("13"): 
+			EXPECTED: true
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("15"): 
+			EXPECTED: false
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("2048"): 
+			EXPECTED: false
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("1031"): 
+			EXPECTED: true
+			RECEIVED: raised Exception
+	  TEST FINISHED, PASSED: 0/14.
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
+	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.22</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
