--- a/stureports/think-java/Fwuff547.think-java_results.html
+++ b/stureports/think-java/Fwuff547.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-04
+Run date: 2018-10-07
 <br>Student User: Fwuff547
 <br>Project: think-java
 <br>
@@ -65,7 +65,7 @@ How many seconds?
 [RUNNING] Exercise4
 -->
 I have a number between 1 and 100, guess what it is?
-	You guessed 13, I was thinking of 2, you were -11 off.
+	You guessed 13, I was thinking of 82, you were 69 off.
 <--
 	[OUTPUT OK]
 
@@ -114,18 +114,15 @@ abcdef
 	beknow
 	no
 	eh
-	
-	<br>Results for Exercise4.isAbecedarian()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
+	Test: Results for Exercise4.isAbecedarian()
+	  [PASSED] Exercise4.isAbecedarian("abcdef") 
+	  [PASSED] Exercise4.isAbecedarian("aaaaaa") 
+	  [PASSED] Exercise4.isAbecedarian("gfedcba") 
+	  [PASSED] Exercise4.isAbecedarian("z") 
+	  [PASSED] Exercise4.isAbecedarian("beknow") 
+	  [PASSED] Exercise4.isAbecedarian("no") 
+	  [PASSED] Exercise4.isAbecedarian("he") 
+	  TEST FINISHED, PASSED: 7/7.
 	
 <--
 	[OUTPUT OK]
@@ -137,29 +134,28 @@ abcdef
 	[SUCCESSFUL COMPILE] Ch6Ex5.java
 [RUNNING] Ch6Ex5
 -->
-
-	<br>Results for Exercise5().isDoubloon()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.isDoubloon("abcdef")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("anna")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("abcdabcd")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aaa")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("intestines")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("i cook crepes on sundays!")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("Bannab")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	</table><br>
-	[deductions=0.05]
-	
+Test: Results for Exercise5().isDoubloon()
+	  [PASSED] Exercise5.isDoubloon("abcdef") 
+	  [PASSED] Exercise5.isDoubloon("aa") 
+	  [PASSED] Exercise5.isDoubloon("anna") 
+	  [PASSED] Exercise5.isDoubloon("abcdabcd") 
+	  [PASSED] Exercise5.isDoubloon("aaa") 
+	  [PASSED] Exercise5.isDoubloon("intestines") 
+	  [PASSED] Exercise5.isDoubloon("i cook crepes on sundays!") 
+	  [   :( ] Exercise5.isDoubloon("Bannab"): 
+			EXPECTED: true
+			RECEIVED: false
+	  TEST FINISHED, PASSED: 7/8.
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
 	['Exercise4: PASSED - EXCELLENT!'
-	 'Exercise5: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
+	 'Exercise5: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] <font color="green">0.95</font></b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
@@ -175,31 +171,26 @@ abcdef
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-
-	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">12,6,3,10,5,16,8,4,2,1</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">4,2,1</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">11,34,17,52,26,13,40,20,10,5,16,8,4,2,1</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Results for isPrime()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
+Test: Results for reverseStr()
+	  [PASSED] reverseStr("I haz win?") 
+	  [PASSED] reverseStr("007 bond james") 
+	  [PASSED] reverseStr("banannas") 
+	  [PASSED] reverseStr("tacocat") 
+	  TEST FINISHED, PASSED: 4/4.
+	Test: Results for collatzThis()
+	  [PASSED] collatzThis("12") 
+	  [PASSED] collatzThis("4") 
+	  [PASSED] collatzThis("11") 
+	  TEST FINISHED, PASSED: 7/7.
+	Test: Results for isPrime()
+	  [PASSED] isPrime("12") 
+	  [PASSED] isPrime("4") 
+	  [PASSED] isPrime("7") 
+	  [PASSED] isPrime("13") 
+	  [PASSED] isPrime("15") 
+	  [PASSED] isPrime("2048") 
+	  [PASSED] isPrime("1031") 
+	  TEST FINISHED, PASSED: 14/14.
 	
 <--
 	[OUTPUT OK]
