--- a/stureports/think-java/Jake4902.think-java_results.html
+++ b/stureports/think-java/Jake4902.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-04
+Run date: 2018-10-07
 <br>Student User: Jake4902
 <br>Project: think-java
 <br>
@@ -53,7 +53,7 @@ Enter seconds:
 I'm thinking of a number between 1 and 100
 	(including both). Can you guess what it is?
 	Type a number: Your guess is: 13
-	The number I was thinking of is: 93
+	The number I was thinking of is: 82
 	You were off by: 100
 	
 <--
@@ -102,18 +102,17 @@ Is Abecedarian
 	Is Abecedarian
 	Is Abecedarian
 	Not Abecedarian
-	
-	<br>Results for Exercise4.isAbecedarian()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.05]
-	
+	Test: Results for Exercise4.isAbecedarian()
+	  [PASSED] Exercise4.isAbecedarian("abcdef") 
+	  [   :( ] Exercise4.isAbecedarian("aaaaaa"): 
+			EXPECTED: true
+			RECEIVED: false
+	  [PASSED] Exercise4.isAbecedarian("gfedcba") 
+	  [PASSED] Exercise4.isAbecedarian("z") 
+	  [PASSED] Exercise4.isAbecedarian("beknow") 
+	  [PASSED] Exercise4.isAbecedarian("no") 
+	  [PASSED] Exercise4.isAbecedarian("he") 
+	  TEST FINISHED, PASSED: 6/7.
 	
 <--
 	[OUTPUT OK]
@@ -141,11 +140,11 @@ Is Abecedarian
 	5 errors
 	
 [SUMMARY] 
-	['Exercise4: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.'
+	['Exercise4: PASSED - EXCELLENT!'
 	 'Exercise5: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.65</b>
+<b>          [SCORE] 0.70</b>
 
 <hr>
 
@@ -161,39 +160,54 @@ Is Abecedarian
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-
-	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">6310516842</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">2</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">3417522613402010516842</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	</table><br>
-	
-	<br>Results for isPrime()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
-	</table><br>
-	[deductions=0.6]
-	
+Test: Results for reverseStr()
+	  [PASSED] reverseStr("I haz win?") 
+	  [PASSED] reverseStr("007 bond james") 
+	  [PASSED] reverseStr("banannas") 
+	  [PASSED] reverseStr("tacocat") 
+	  TEST FINISHED, PASSED: 4/4.
+	Test: Results for collatzThis()
+	  [   :( ] collatzThis("12"): 
+			EXPECTED: 12, 6, 3, 10, 5, 16, 8, 4, 2, 1
+			RECEIVED: 6310516842
+	  [   :( ] collatzThis("4"): 
+			EXPECTED: 4, 2, 1
+			RECEIVED: 2
+	  [   :( ] collatzThis("11"): 
+			EXPECTED: 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1
+			RECEIVED: 3417522613402010516842
+	  TEST FINISHED, PASSED: 4/7.
+	Test: Results for isPrime()
+	  [   :( ] isPrime("12"): 
+			EXPECTED: false
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("4"): 
+			EXPECTED: false
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("7"): 
+			EXPECTED: true
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("13"): 
+			EXPECTED: true
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("15"): 
+			EXPECTED: false
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("2048"): 
+			EXPECTED: false
+			RECEIVED: raised Exception
+	  [   :( ] isPrime("1031"): 
+			EXPECTED: true
+			RECEIVED: raised Exception
+	  TEST FINISHED, PASSED: 4/14.
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
+	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.40</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
