--- a/stureports/think-java/Marcus620.think-java_results.html
+++ b/stureports/think-java/Marcus620.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-04
+Run date: 2018-10-07
 <br>Student User: Marcus620
 <br>Project: think-java
 <br>
@@ -22,20 +22,48 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-	[ERROR] No chapter work for:chapter2
+[COMPILING] Date.java
+	[ERROR] javac failed Date.java Date.java:1: error: class date is public, should be declared in a file named date.java
+	public class date {
+	       ^
+	1 error
+	
+[COMPILING] Time.java
+	[ERROR] javac failed Time.java Time.java:1: error: class time is public, should be declared in a file named time.java
+	public class time{
+	       ^
+	1 error
+	
+[SUMMARY] 
+	['Date: COMPILE ERROR (- 0.10)'
+	 'Time: COMPILE ERROR (- 0.10)']
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[SUMMARY] 
+	['Exercise3: MISSING (- 0.17)'
+	 'Exercise4: MISSING (- 0.17)']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+10.0
+	1.0606601717798212
+	5.298317366548037
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.47</b>
 
 <hr>
 
@@ -44,10 +72,12 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-	[ERROR] No chapter work for:chapter6
+[SUMMARY] 
+	['Exercise4: MISSING (- 0.50)'
+	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
@@ -56,9 +86,10 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-	[ERROR] No chapter work for:chapter6
+[SUMMARY] 
+	['Swettercise1: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.50</b>
 
 </pre></body></html>
