--- a/stureports/think-java/bethtojatjar.think-java_results.html
+++ b/stureports/think-java/bethtojatjar.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-04
+Run date: 2018-10-07
 <br>Student User: bethtojatjar
 <br>Project: think-java
 <br>
@@ -99,39 +99,50 @@ The amount of seconds since midnight is: 39780 seconds
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-
-	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">raised exception</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">raised exception</td><td bgcolor="red"><b>semaj dnob 700 </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">raised exception</td><td bgcolor="red"><b>sannanab </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">raised exception</td><td bgcolor="red"><b>tacocat </b></td></tr>
-	</table><br>
-	
-	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left"></td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left"></td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left"></td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	</table><br>
-	
-	<br>Results for isPrime()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.26]
-	
+Test: Results for reverseStr()
+	  [   :( ] reverseStr("I haz win?"): 
+			EXPECTED: ?niw zah I
+			RECEIVED: raised exception
+	  [   :( ] reverseStr("007 bond james"): 
+			EXPECTED: semaj dnob 700
+			RECEIVED: raised exception
+	  [   :( ] reverseStr("banannas"): 
+			EXPECTED: sannanab
+			RECEIVED: raised exception
+	  [   :( ] reverseStr("tacocat"): 
+			EXPECTED: tacocat
+			RECEIVED: raised exception
+	  TEST FINISHED, PASSED: 0/4.
+	Test: Results for collatzThis()
+	  [   :( ] collatzThis("12"): 
+			EXPECTED: 12, 6, 3, 10, 5, 16, 8, 4, 2, 1
+			RECEIVED: 
+	  [   :( ] collatzThis("4"): 
+			EXPECTED: 4, 2, 1
+			RECEIVED: 
+	  [   :( ] collatzThis("11"): 
+			EXPECTED: 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1
+			RECEIVED: 
+	  TEST FINISHED, PASSED: 0/7.
+	Test: Results for isPrime()
+	  [PASSED] isPrime("12") 
+	  [   :( ] isPrime("4"): 
+			EXPECTED: false
+			RECEIVED: true
+	  [PASSED] isPrime("7") 
+	  [PASSED] isPrime("13") 
+	  [PASSED] isPrime("15") 
+	  [PASSED] isPrime("2048") 
+	  [PASSED] isPrime("1031") 
+	  TEST FINISHED, PASSED: 6/14.
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: PASSED - BUT TEST CASES FOUND SOME ERRORS']
+	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.74</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
