--- a/stureports/think-java/maxckaeh.think-java_results.html
+++ b/stureports/think-java/maxckaeh.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-04
+Run date: 2018-10-07
 <br>Student User: maxckaeh
 <br>Project: think-java
 <br>
@@ -66,8 +66,8 @@ Total number of seconds: 13 seconds = 0 hours, 0 minutes, and 13 seconds.
 -->
 I'm thinking of a number between 0 and 100 (including both). Can you guess what it is? 
 	Your guess is: 13
-	The number I was thinking of is: 22
-	You were off by: -9
+	The number I was thinking of is: 5
+	You were off by: 8
 	
 <--
 	[OUTPUT OK]
@@ -109,18 +109,15 @@ I'm thinking of a number between 0 and 100 (including both). Can you guess what 
 	[SUCCESSFUL COMPILE] Ch6Ex4.java
 [RUNNING] Ch6Ex4
 -->
-
-	<br>Results for Exercise4.isAbecedarian()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
+Test: Results for Exercise4.isAbecedarian()
+	  [PASSED] Exercise4.isAbecedarian("abcdef") 
+	  [PASSED] Exercise4.isAbecedarian("aaaaaa") 
+	  [PASSED] Exercise4.isAbecedarian("gfedcba") 
+	  [PASSED] Exercise4.isAbecedarian("z") 
+	  [PASSED] Exercise4.isAbecedarian("beknow") 
+	  [PASSED] Exercise4.isAbecedarian("no") 
+	  [PASSED] Exercise4.isAbecedarian("he") 
+	  TEST FINISHED, PASSED: 7/7.
 	
 <--
 	[OUTPUT OK]
@@ -132,29 +129,30 @@ I'm thinking of a number between 0 and 100 (including both). Can you guess what 
 	[SUCCESSFUL COMPILE] Ch6Ex5.java
 [RUNNING] Ch6Ex5
 -->
-
-	<br>Results for Exercise5().isDoubloon()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.isDoubloon("abcdef")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aa")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("anna")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("abcdabcd")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aaa")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("intestines")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("i cook crepes on sundays!")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("Bannab")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.05]
-	
+Test: Results for Exercise5().isDoubloon()
+	  [PASSED] Exercise5.isDoubloon("abcdef") 
+	  [   :( ] Exercise5.isDoubloon("aa"): 
+			EXPECTED: true
+			RECEIVED: false
+	  [PASSED] Exercise5.isDoubloon("anna") 
+	  [PASSED] Exercise5.isDoubloon("abcdabcd") 
+	  [   :( ] Exercise5.isDoubloon("aaa"): 
+			EXPECTED: false
+			RECEIVED: true
+	  [PASSED] Exercise5.isDoubloon("intestines") 
+	  [PASSED] Exercise5.isDoubloon("i cook crepes on sundays!") 
+	  [PASSED] Exercise5.isDoubloon("Bannab") 
+	  TEST FINISHED, PASSED: 6/8.
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
 	['Exercise4: PASSED - EXCELLENT!'
-	 'Exercise5: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
+	 'Exercise5: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] <font color="green">0.95</font></b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
@@ -170,39 +168,48 @@ I'm thinking of a number between 0 and 100 (including both). Can you guess what 
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-
-	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left"> ?niw zah I</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left"> semaj dnob 700</td><td bgcolor="red"><b>semaj dnob 700 </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left"> sannanab</td><td bgcolor="red"><b>sannanab </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left"> tacocat</td><td bgcolor="red"><b>tacocat </b></td></tr>
-	</table><br>
-	
-	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	</table><br>
-	
-	<br>Results for isPrime()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.26999999999999996]
-	
+Test: Results for reverseStr()
+	  [   :( ] reverseStr("I haz win?"): 
+			EXPECTED: ?niw zah I
+			RECEIVED:  ?niw zah I
+	  [   :( ] reverseStr("007 bond james"): 
+			EXPECTED: semaj dnob 700
+			RECEIVED:  semaj dnob 700
+	  [   :( ] reverseStr("banannas"): 
+			EXPECTED: sannanab
+			RECEIVED:  sannanab
+	  [   :( ] reverseStr("tacocat"): 
+			EXPECTED: tacocat
+			RECEIVED:  tacocat
+	  TEST FINISHED, PASSED: 0/4.
+	Test: Results for collatzThis()
+	  [   :( ] collatzThis("12"): 
+			EXPECTED: 12, 6, 3, 10, 5, 16, 8, 4, 2, 1
+			RECEIVED: Raised Exception
+	  [   :( ] collatzThis("4"): 
+			EXPECTED: 4, 2, 1
+			RECEIVED: Raised Exception
+	  [   :( ] collatzThis("11"): 
+			EXPECTED: 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1
+			RECEIVED: Raised Exception
+	  TEST FINISHED, PASSED: 0/7.
+	Test: Results for isPrime()
+	  [PASSED] isPrime("12") 
+	  [PASSED] isPrime("4") 
+	  [PASSED] isPrime("7") 
+	  [PASSED] isPrime("13") 
+	  [PASSED] isPrime("15") 
+	  [PASSED] isPrime("2048") 
+	  [PASSED] isPrime("1031") 
+	  TEST FINISHED, PASSED: 7/14.
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: PASSED - BUT TEST CASES FOUND SOME ERRORS']
+	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.73</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
